part1/1.08/todo/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 80
